crates/rr-core/tests/snapshots/tags_fixture__jsx_surface.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"surface.jsx\", &facts)"
---
path: surface.jsx
status: tags(parse_errors=false)
defs:
  - name: Badge
    local_qualified: ~
    kind: function
    visibility: public
    start_line: 1
    end_line: 3
    signature: "function Badge({ label }) {"
    signature_idents:
      - function
      - label
    body_idents:
      - return
      - b
      - className
      - x
      - label
      - b
    doc_idents: []
    attribute_idents: []
  - name: BadgeList
    local_qualified: ~
    kind: function
    visibility: public
    start_line: 5
    end_line: 11
    signature: "BadgeList = ({ items }) => ("
    signature_idents:
      - items
    body_idents:
      - ul
      - items
      - map
      - item
      - Badge
      - key
      - item
      - label
      - item
      - ul
    doc_idents: []
    attribute_idents: []
  - name: Panel
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 13
    end_line: 17
    signature: "class Panel {"
    signature_idents:
      - class
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: render
    local_qualified: Panel.render
    kind: method
    visibility: public
    start_line: 14
    end_line: 16
    signature: "render() {"
    signature_idents: []
    body_idents:
      - return
      - Badge
      - label
      - ok
    doc_idents: []
    attribute_idents: []
references:
  - name: map
    kind: call
    line: 7
    owner: BadgeList
imports: []
